# ethcolosseumhackathon

./: .gitignore  Makefile  README.md  architecture.puml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: __init__.py  api.py  just_transcribe.py  main.py  main_agent.py  stop_transcribe.py  test_audio.py  test_ollama.py
backend/src/data/: institute_1.json
backend/src/insurance/: insurance_agent.py  language_utils.py  tools.py
backend/src/llm/: __init__.py  chain.py  config.py  test_chain.py  tools.py
backend/src/llm/tests/: test_chain.py
backend/src/models/: faster_whisper.py
backend/src/tests/: generate_test_audio.py  test_insurance_agent.py  test_integration.py
backend/src/transcription/: __init__.py  whisper_manager.py
backend/src/transcription/tests/: test_whisper.py
backend/src/websocket/: __init__.py  newest.py  server.py  whisper_transcribe.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: activity-metrics.tsx  chat-input.tsx  message-history.tsx  settings-panel.tsx  statistics-panel.tsx  summary-panel.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/: app-header.tsx  app-sidebar.tsx  highlighted-conversations.tsx  metric-card.tsx  performance-insights.tsx  trend-chart.tsx
frontend/src/pages/: Audit.tsx  (+8 more)
(+75 files in other folders)
